--- a/杂项.md
+++ b/杂项.md
@@ -29,8 +29,41 @@ IDE产生的文件，这是vs打开工程后产生的
 
 -------------
 
+品质管理
+性能指标
+Drawcall	200	150	100
+内存	300	250	200
+帧率	25-30	25-30	25-30
+加载	5秒	5秒	8秒
+发热	低	低	低
+
+关键资源指标
+粒子发射器	50	50	30
+粒子数	300	200	150
+角色面数	3000-7000	3000-7000	3000-7000
+角色骨骼	90	90	90
+角色drawcall	3	3	1-2
+场景面数(统计显示)	
+2W-5W
+
+2W-5W	2W-5W
+场景drawcall(含特效)	50	40	30
+总面数	20w	15w	10w
+
+
+高中低适配
+Quality High	Medium	Low
+光照	1个	1个	1个
+实时阴影	有	有	无
+后处理	有	有	无
+分辨率	默认	1920*1080	1280*720
+Shader特性       PBR	PBR	
+Shader LOD	infinite	600	300
+
+
 ## 参考链接
 [Unity 官方教程：Assets，Resources，AssetBundle](https://learn.unity.com/tutorial/assets-resources-and-assetbundles#5c7f8528edbc2a002053b5a8)
 [Unity 的memory-management](https://learn.unity.com/tutorial/memory-management-in-unity?language=en#5c7f8528edbc2a002053b599)
 [Unity 的AssetBundle教程](https://learn.unity.com/tutorial/introduction-to-asset-bundles?language=en#5ce589b4edbc2a106aa7b47a)
+[Batch Breaking](https://github.com/Unity-Technologies/BatchBreakingCause)
 
